<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_add_personagem"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_adicione_um_personagem_da_marvel"
        android:textSize="@dimen/tamanho_fonte_18"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/et_nomePersonagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_do_personagem"
        android:layout_margin="@dimen/margem_16"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/tv_add_personagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_descricaoPersonagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descri_o_do_personagem"
        android:layout_margin="@dimen/margem_16"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/et_nomePersonagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_Cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:text="@string/texto_cadastrar_personagem"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/et_descricaoPersonagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>