<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_nome_personagem"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_nome_vampira"
        android:textSize="@dimen/tamanho_fonte_18"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tv_texto_descricao_personagem"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_descricao_vampira"
        android:textSize="@dimen/tamanho_fonte_12"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/tv_nome_personagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:text="@string/texto_botao_voltar"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tv_texto_descricao_personagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>